Crash playing smoke animation, when linked as group instance #43803

Closed
opened 2015-02-25 01:34:08 +01:00 by William Di Luigi · 10 comments

System Information
I can reproduce this on Windows, Ubuntu, Archlinux

Blender Version
Broken: 2.73a

This is the output of the execution:

$ blender --verbose

Error: you must specify a verbosity level.
loadTile: No noise tile '/tmp/blender_uz9mPF/noise.wavelets' found.
Generating new 3d noise tile size=128^3 
saveTile: Noise tile file '/tmp/blender_uz9mPF/noise.wavelets' saved.
Generating new 3d noise done
Writing: /tmp/blender.crash.txt
[1]    9139 segmentation fault (core dumped)  blender --verbose

The /tmp/blender.crash.txt is this:

# Blender 2.73 (sub 0), Commit date: 2015-01-20 18:16, Hash bbf09d9

# backtrace
blender(BLI_system_backtrace+0x30) [0x11bd120]
blender() [0x8df25b]
/usr/lib/libc.so.6(+0x33540) [0x7fa19efd7540]
/usr/lib/libc.so.6(+0x90550) [0x7fa19f034550]
blender() [0xe92c70]
blender(DM_DupPolys+0xb9) [0xe940b9]
blender() [0xebc48b]
blender() [0x8c40de]
blender(smokeModifier_do+0x1568) [0xfc3b08]
blender() [0xe980c8]
blender() [0xe9907c]
blender(BKE_object_handle_update_ex+0x5aa) [0xf67c3a]
blender() [0xfa9036]
blender(BLI_task_pool_work_and_wait+0xb3) [0x11bd853]
blender() [0xfa91c6]
blender() [0xfaa2d8]
blender(BKE_scene_update_for_newframe_ex+0x196) [0xfabe36]
blender(ED_update_for_newframe+0xaa) [0xb8abea]
blender() [0xb8c1ec]
blender() [0x8e72b1]
blender() [0x8e855d]
blender() [0x8e8972]
blender() [0x8e8dc8]
blender(wm_event_do_handlers+0x740) [0x8e9640]
blender(WM_main+0x18) [0x8e1258]
blender(main+0xdc4) [0x8c7804]
/usr/lib/libc.so.6(__libc_start_main+0xf0) [0x7fa19efc4800]
blender() [0x8deac4]

Exact steps for others to reproduce the error

  1. Create an empty blend file
  2. "File" -> "Link"
  3. Navigate to the attached fire.blend and select the "fire" group
  4. Play on the timeline (ALT+A)

Notice that if you play directly from the fire.blend it will not segfault.

P.S. It seems that after uploading (that's right, after uploading) this bug tracker decided that 11MB were too much. So no attachment :(

**System Information** I can reproduce this on Windows, Ubuntu, Archlinux **Blender Version** Broken: 2.73a This is the output of the execution: ``` $ blender --verbose Error: you must specify a verbosity level. loadTile: No noise tile '/tmp/blender_uz9mPF/noise.wavelets' found. Generating new 3d noise tile size=128^3 saveTile: Noise tile file '/tmp/blender_uz9mPF/noise.wavelets' saved. Generating new 3d noise done Writing: /tmp/blender.crash.txt [1] 9139 segmentation fault (core dumped) blender --verbose ``` The /tmp/blender.crash.txt is this: ``` # Blender 2.73 (sub 0), Commit date: 2015-01-20 18:16, Hash bbf09d9 # backtrace blender(BLI_system_backtrace+0x30) [0x11bd120] blender() [0x8df25b] /usr/lib/libc.so.6(+0x33540) [0x7fa19efd7540] /usr/lib/libc.so.6(+0x90550) [0x7fa19f034550] blender() [0xe92c70] blender(DM_DupPolys+0xb9) [0xe940b9] blender() [0xebc48b] blender() [0x8c40de] blender(smokeModifier_do+0x1568) [0xfc3b08] blender() [0xe980c8] blender() [0xe9907c] blender(BKE_object_handle_update_ex+0x5aa) [0xf67c3a] blender() [0xfa9036] blender(BLI_task_pool_work_and_wait+0xb3) [0x11bd853] blender() [0xfa91c6] blender() [0xfaa2d8] blender(BKE_scene_update_for_newframe_ex+0x196) [0xfabe36] blender(ED_update_for_newframe+0xaa) [0xb8abea] blender() [0xb8c1ec] blender() [0x8e72b1] blender() [0x8e855d] blender() [0x8e8972] blender() [0x8e8dc8] blender(wm_event_do_handlers+0x740) [0x8e9640] blender(WM_main+0x18) [0x8e1258] blender(main+0xdc4) [0x8c7804] /usr/lib/libc.so.6(__libc_start_main+0xf0) [0x7fa19efc4800] blender() [0x8deac4] ``` **Exact steps for others to reproduce the error** 1) Create an empty blend file 2) "File" -> "Link" 2) Navigate to the attached fire.blend and select the "fire" group 3) Play on the timeline (ALT+A) Notice that if you play directly from the fire.blend it will not segfault. P.S. It seems that after uploading (that's right, *after* uploading) this bug tracker decided that 11MB were too much. So no attachment :(

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @wil93

Added subscriber: @wil93

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Without the file we'd probably not be able to confirm or infirm the issue. You may upload it on some file sharing site (like WeTransfer, DropBox, etc...), and post the link to it here.

Without the file we'd probably not be able to confirm or infirm the issue. You may upload it on some file sharing site (like WeTransfer, DropBox, etc...), and post the link to it here.
Here it is :) https://dl.dropboxusercontent.com/u/45305908/fire.blend

Thanks.

Some quick backtrace: http://www.pasteall.org/56881/text

Thanks. Some quick backtrace: http://www.pasteall.org/56881/text
Campbell Barton changed title from Segfault when playing animation after linking a file to Crash playing smoke animation, when linked as group instance 2015-02-27 10:25:05 +01:00
Sergey Sharybin self-assigned this 2015-03-10 12:58:16 +01:00

The issue is cased by missing relations when building dependency graph. There's a proposed patch D1172 which is dangerous to be applied for 2.74 and will be refined/applied after our git is open for normal development.

The issue is cased by missing relations when building dependency graph. There's a proposed patch [D1172](https://archive.blender.org/developer/D1172) which is dangerous to be applied for 2.74 and will be refined/applied after our git is open for normal development.

This issue was referenced by 1cac8c23b5

This issue was referenced by 1cac8c23b5fdf151accaad8c785629f7495af5e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1cac8c23b5.

Closed by commit 1cac8c23b5.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43803
No description provided.